force-app/main/default/objects/Log__c.object
<CustomObject>
    <fields>
        <fullName>Affected_Record__c</fullName>
        <label>Affected Record</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <label>Error Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <label>Event</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_Number__c</fullName>
        <label>Line Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Severity__c</fullName>
        <label>Severity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stack_trace__c</fullName>
        <label>Stack trace</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <label>DFJ Log</label>
    <listViews>
        <fullName>Important_messages</fullName>
        <columns>CREATED_DATE</columns>
        <columns>Event__c</columns>
        <columns>Message__c</columns>
        <columns>Severity__c</columns>
        <columns>Source__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>NAME</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>Important messages</label>
    </listViews>
    <nameField>
        <displayFormat>DFJL-{00000}</displayFormat>
        <label>Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DFJ Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>