force-app/main/default/objects/Log__c/listViews/Important_messages.listView-meta.xml
<ListView>
    <fullName>Important_messages</fullName>
    <columns>CREATED_DATE</columns>
    <columns>Event__c</columns>
    <columns>Message__c</columns>
    <columns>Severity__c</columns>
    <columns>Source__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>NAME</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <label>Important messages</label>
</ListView>